Overflowing button fix

--- a/css/main.css
+++ b/css/main.css
@@ -97,6 +97,9 @@ a.button {
     font-weight: bold;
     text-align: center;
     text-decoration: none;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     outline: 0;
     transition: all 0.5s ease;
 }
